{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 687,
  "lineage": "dd9c8516-a998-e0e2-900b-2bc7fe9dee82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:security-group/sg-073ffda9c0445fd1d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-073ffda9c0445fd1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "181.63.24.81/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241008150110909300000009",
            "name_prefix": "terraform-",
            "owner_id": "597088025853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/nginx-service",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-service",
                "namespace": "default",
                "resource_version": "823",
                "uid": "fe233ae7-58d6-4224-99ec-07aaf30fa5d8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.57.54",
                "cluster_ips": [
                  "172.20.57.54"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30857,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "afe233ae758d6422499ec07aaf30fa5d-656401396.us-east-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:security-group/sg-0814145a565592339",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0814145a565592339",
            "ingress": [],
            "name": "cloudapp-eks-cluster-20241008150107559700000006",
            "name_prefix": "cloudapp-eks-cluster-",
            "owner_id": "597088025853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Cloud_App",
              "Name": "cloudapp-eks-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "cloudapp-eks-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:security-group/sg-0e08af34f9a891da6",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0e08af34f9a891da6",
            "ingress": [],
            "name": "cloudapp-eks-node-20241008150107540200000004",
            "name_prefix": "cloudapp-eks-node-",
            "owner_id": "597088025853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Cloud_App",
              "Name": "cloudapp-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/cloudapp-eks": "owned"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "cloudapp-eks-node",
              "Terraform": "true",
              "kubernetes.io/cluster/cloudapp-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-532617580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0814145a565592339",
            "security_group_rule_id": "sgr-03914beaccc9bb5d7",
            "self": false,
            "source_security_group_id": "sg-0e08af34f9a891da6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4047287483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-0792eee2be9a6a6fb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3389795736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-007f4adeeb67a97ad",
            "self": false,
            "source_security_group_id": "sg-0814145a565592339",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2169198357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-011f93cce9a6e9c25",
            "self": false,
            "source_security_group_id": "sg-0814145a565592339",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1208561795",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-0b11e71997c4d1910",
            "self": false,
            "source_security_group_id": "sg-0814145a565592339",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1532300450",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-0b96b54caa6ccdb69",
            "self": false,
            "source_security_group_id": "sg-0814145a565592339",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1072971625",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-025688a11fd3aa197",
            "self": false,
            "source_security_group_id": "sg-0814145a565592339",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-80786936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-06fa3abd5fa166467",
            "self": false,
            "source_security_group_id": "sg-0814145a565592339",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2062132442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-08bf4a95b9bd3c2d1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1570970242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-07a3fc0527fb5bf81",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4194089325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e08af34f9a891da6",
            "security_group_rule_id": "sgr-0885769bdb07a5709",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:network-acl/acl-08a39d24c70f0ac2f",
            "default_network_acl_id": "acl-08a39d24c70f0ac2f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08a39d24c70f0ac2f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "597088025853",
            "subnet_ids": [
              "subnet-0364e71071a626fd6",
              "subnet-04fd1f974208145dc",
              "subnet-07e39dd42e3f772d0",
              "subnet-0bcc16d787ce5d657"
            ],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:route-table/rtb-08dd60d9fbd7fb2eb",
            "default_route_table_id": "rtb-08dd60d9fbd7fb2eb",
            "id": "rtb-08dd60d9fbd7fb2eb",
            "owner_id": "597088025853",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:security-group/sg-0b3b6c0f3e425527e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b3b6c0f3e425527e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "597088025853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0965e4309507247",
            "arn": "arn:aws:ec2:us-east-2:597088025853:elastic-ip/eipalloc-0d0965e4309507247",
            "domain": "vpc",
            "id": "eipalloc-0d0965e4309507247",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-222-19-39.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.19.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092b5bf84ef8bc95e",
            "arn": "arn:aws:ec2:us-east-2:597088025853:elastic-ip/eipalloc-092b5bf84ef8bc95e",
            "domain": "vpc",
            "id": "eipalloc-092b5bf84ef8bc95e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-124-191.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.124.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:internet-gateway/igw-0b580bd68d388b9fd",
            "id": "igw-0b580bd68d388b9fd",
            "owner_id": "597088025853",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0965e4309507247",
            "association_id": "eipassoc-00387ff96b6e88d06",
            "connectivity_type": "public",
            "id": "nat-0121604d681d8e35f",
            "network_interface_id": "eni-08bd6aabecc38c3b4",
            "private_ip": "10.0.3.88",
            "public_ip": "18.222.19.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0364e71071a626fd6",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092b5bf84ef8bc95e",
            "association_id": "eipassoc-09dfed8e9481a6c98",
            "connectivity_type": "public",
            "id": "nat-055f419442fe83979",
            "network_interface_id": "eni-0d50c63617995e17a",
            "private_ip": "10.0.4.59",
            "public_ip": "52.14.124.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bcc16d787ce5d657",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a44b34ade31e696f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0121604d681d8e35f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a44b34ade31e696f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082930924d0e786de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-055f419442fe83979",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082930924d0e786de",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b580bd68d388b9fd",
            "id": "r-rtb-0b3f861925b6bd5a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3f861925b6bd5a7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:route-table/rtb-0a44b34ade31e696f",
            "id": "rtb-0a44b34ade31e696f",
            "owner_id": "597088025853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:route-table/rtb-082930924d0e786de",
            "id": "rtb-082930924d0e786de",
            "owner_id": "597088025853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:route-table/rtb-0b3f861925b6bd5a7",
            "id": "rtb-0b3f861925b6bd5a7",
            "owner_id": "597088025853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044c99eecbd599591",
            "route_table_id": "rtb-0a44b34ade31e696f",
            "subnet_id": "subnet-07e39dd42e3f772d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ab024f3f39b1ae",
            "route_table_id": "rtb-082930924d0e786de",
            "subnet_id": "subnet-04fd1f974208145dc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09685f187a3b0d928",
            "route_table_id": "rtb-0b3f861925b6bd5a7",
            "subnet_id": "subnet-0364e71071a626fd6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f5a5898ca96d35",
            "route_table_id": "rtb-0b3f861925b6bd5a7",
            "subnet_id": "subnet-0bcc16d787ce5d657"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:subnet/subnet-07e39dd42e3f772d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e39dd42e3f772d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088025853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:subnet/subnet-04fd1f974208145dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd1f974208145dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088025853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:subnet/subnet-0364e71071a626fd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0364e71071a626fd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088025853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:subnet/subnet-0bcc16d787ce5d657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcc16d787ce5d657",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597088025853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07036660261d7f3a3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:597088025853:vpc/vpc-07036660261d7f3a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a39d24c70f0ac2f",
            "default_route_table_id": "rtb-08dd60d9fbd7fb2eb",
            "default_security_group_id": "sg-0b3b6c0f3e425527e",
            "dhcp_options_id": "dopt-003f44c20c1774a22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07036660261d7f3a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08dd60d9fbd7fb2eb",
            "owner_id": "597088025853",
            "tags": {
              "Environment": "Cloud_App",
              "Name": "CloudApp",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Cloud_App",
              "Name": "CloudApp",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}